# react-native-libsodium

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPPLINT.cfg  LICENSE  README.md  app.plugin.js  eslint.config.mjs  package.json  playwright.config.ts  react-native-libsodium.podspec  react-native-rnlibsodium.podspec  tsconfig.build.json  tsconfig.json
.github/actions/setup/: action.yml
.github/workflows/: build-android.yml  build-ios.yml  ci.yml  codeql.yml  e2e-android.yml  e2e-ios.yml  e2e-web.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/libsodium/: LibsodiumModule.java  LibsodiumPackage.java
android/src/main/java/com/rnlibsodium/: Libsodium.java  LibsodiumModule.java  LibsodiumPackage.java  RnlibsodiumModule.java  RnlibsodiumPackage.java
cpp/: CPPLINT.cfg  react-native-libsodium.cpp  react-native-libsodium.h  react-native-rnlibsodium.cpp  react-native-rnlibsodium.h
cpp/include/: react-native-libsodium.h
e2e-tests/: maestro-flow-android.yml  maestro-flow-ios.yml
e2e-tests/web/: flow-web.e2e.ts
example/: Gemfile  app.json  index.js  metro.config.js  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: _BUCK  build.gradle
example/ios/: .xcode.env.local  AppDelegate.swift  File.swift  Podfile
example/ios/LibsodiumExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/LibsodiumExample.xcodeproj/: project.pbxproj
example/ios/LibsodiumExample.xcworkspace/: contents.xcworkspacedata
example/ios/LibsodiumExampleTests/: LibsodiumExampleTests.m
example/ios/RnlibsodiumExample/: AppDelegate.mm  Info.plist  (+1 more)
example/ios/RnlibsodiumExample.xcodeproj/: project.pbxproj
example/ios/RnlibsodiumExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx  Row.tsx  Test_from_base64.tsx  Test_to_base64.tsx  largeContent.ts
example/web/: webpack.config.js
ios/: Libsodium.h  Libsodium.mm  Rnlibsodium.h  Rnlibsodium.mm
ios/Libsodium.xcodeproj/: project.pbxproj
ios/Rnlibsodium.xcodeproj/: project.pbxproj
libsodium/: ._build  build.sh  libsodium-1.0.18-stable.tar.gz.minisig  libsodium-1.0.19-stable.tar.gz.minisig  libsodium-1.0.20-stable.tar.gz.minisig  libsodium-1.0.21-stable.tar.gz.minisig
src/: NativeLibsodium.ts  index.ts  index.tsx  index.web.ts  lib.native.ts  lib.ts  libsodium-js-utils.ts  libsodium-types.ts  types.ts  utils.ts
src/__tests__/: index.test.tsx
(+105 files in other folders)
